# gxe-aou

./: .gitmodules  README.md
analysis/: genotypes-bmc-submission.ipynb  genotypes-bmc-submission.py  survey.ipynb  survey.py
profiling/: genie-bmc-submission.ipynb  simulation.py
profiling/bmc-plot/: main.py
profiling/bmc-plot/aou_j100/: aou_t128_results.out  aou_t128_timing.csv  aou_t16_timing.csv  aou_t1_results.out  aou_t1_timing.csv  aou_t256_results.out  aou_t2_results.out  aou_t32_results.out  aou_t32_timing.csv  aou_t4_results.out  aou_t512_timing.csv  aou_t64_results.out  aou_t64_timing.csv  aou_t8_timing.csv
profiling/vis/: plot_thread_scaling.py  pyproject.toml
profiling/vis/aou_j100/: aou_t16_results.out  aou_t256_timing.csv  aou_t2_timing.csv  aou_t4_timing.csv  aou_t512_results.out  aou_t8_results.out  output.txt
