[project]
name = "bmc-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
pythonPlatform = "aarch64-apple-darwin"
